# GAIL

./: .gitignore  GAIL.sln  README.md  schema.txt
.github/workflows/: codeql.yml
GAIL/: API.cs  Application.cpp  Application.cs  Application.hpp  Audio.cpp  Audio.cs  Audio.hpp  Delegates.cs  GAIL.cpp  GAIL.cs  GAIL.csproj  GAIL.hpp  GAIL.nuspec  GAIL.sln  IManager.cs  Manager.cpp  Manager.cs  Manager.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Structs.cpp  Structs.hpp  Window.hpp
GAIL.NET/: GAIL.cs  GAIL.csproj
GAIL.Networking/: GAIL.Networking.csproj  GAIL.Networking.nuspec  NetworkManager.cs  NetworkRegister.cs  NetworkTarget.cs  Packets.cs
GAIL.Networking/Container/: ClientContainer.cs  Connection.cs  Delegates.cs  Packets.cs  ServerContainer.cs
GAIL.Networking/Packet/: Attributes.cs  Field.cs  Packet.cs  Packets.cs
GAIL.Serializing/: Attributes.cs  GAIL.Serializing.csproj  IRawReducer.cs  IRawSerializable.cs  IReducer.cs  ISerializable.cs  ISerializer.cs  IStreamReducer.cs  Serializable.cs  Serializables.cs
GAIL.Storage/: BaseStorage.cs  Container.cs  Field.cs  GAIL.Storage.csproj  GAIL.Storage.nuspec  LookupStorage.cs  LookupTable.cs  Node.cs  SimpleStorage.cs  Storage.cs  StorageRegister.cs
GAIL/Core/: Obj.cs  (+10 more)
GAIL2D/: Application.cs  GAIL2D.csproj
GAILBindings/: CMakeLists.txt  GAILBindings.cpp  Mesh.cpp  Mesh.hpp  build.bat  dontuse.bat  main.cpp
GAILBindings/.vsc/: launch.json  settings.json  tasks.json
GAILBindings/lib/glad/: glad.h
GAILBindings/lib/glad/lib/: glad.c
Test/: Program.cs
examples/: GAILExamples.csproj  Program.cs
(+172 files in other folders)
